# chaosCode

./: .gitignore  README.md  README_EN.md  pyproject.toml
chaos_code/: __init__.py  __main__.py
chaos_code/agent/: __init__.py  base.py  coding_agent.py  planner_agent.py
chaos_code/cli/: __init__.py  main.py
chaos_code/cli/commands/: __init__.py
chaos_code/config/: __init__.py  settings.py
chaos_code/llm/: __init__.py  base.py  message.py
chaos_code/llm/providers/: __init__.py  litellm_provider.py
chaos_code/mcp/: __init__.py  adapter.py  client.py  protocol.py
chaos_code/permission/: __init__.py  manager.py  rules.py
chaos_code/session/: __init__.py  manager.py  memory.py
chaos_code/tools/: __init__.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py  registry.py
chaos_code/tui/: __init__.py  app.py
chaos_code/tui/screens/: __init__.py
chaos_code/tui/widgets/: __init__.py
chaos_code/utils/: __init__.py
docs/: DEVELOPMENT.md  HIGHLIGHTS.md
docs/00_TODO/: 0.1_ChaosCode_Development_Plan.md
docs/01_Design/: Reference_Sources.md
tests/: conftest.py  test_agent.py  test_mcp.py  test_permission.py  test_session.py  test_tools.py  test_tui.py
