[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaos-code"
version = "0.1.0"
description = "AI 编程助手 CLI 工具，借鉴 OpenCode、Gemini CLI、MS-Agent 精华设计"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "ChaosCode Team" }
]
keywords = ["ai", "cli", "coding-assistant", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing",
]

dependencies = [
    # CLI 框架 [原创选型]
    "typer>=0.9.0",
    "rich>=13.0.0",
    # TUI 界面 [原创选型]
    "textual>=0.40.0",
    # LLM 集成 [MS-Agent 参考]
    "litellm>=1.20.0",
    # 配置管理 [原创选型]
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # 异步支持
    "anyio>=3.0.0",
    # 其他工具
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
chaos-code = "chaos_code.cli.main:app"

[project.urls]
Homepage = "https://github.com/chaos-code/chaos-code"
Documentation = "https://github.com/chaos-code/chaos-code#readme"
Repository = "https://github.com/chaos-code/chaos-code"

# ============== Ruff 配置 ==============
[tool.ruff]
target-version = "py38"
line-length = 100
src = ["chaos_code", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (交给 formatter 处理)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["chaos_code"]

# ============== MyPy 配置 ==============
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============== Pytest 配置 ==============
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============== Coverage 配置 ==============
[tool.coverage.run]
source = ["chaos_code"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
